ATLAS-3044: wip: implementing ttfn dfm v2 api rules