@@ -13,8 +13,7 @@ import java.util.Set;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-class TimetableFieldNumberServiceMergeScenarioTest extends
-    BaseTimetableFieldNumberServiceTest {
+class TimetableFieldNumberServiceMergeScenarioTest extends BaseTimetableFieldNumberServiceTest {
 
   @Autowired
   TimetableFieldNumberServiceMergeScenarioTest(
@@ -39,21 +38,21 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
   @Test
   void scenarioMergeTwoVersions() {
     //given
-    version1.setDescription("SBB1");
+    version1.setDescriptionOutwardLine1("SBB1");
     version1.setNumber("BEX");
     version1 = versionRepository.save(version1);
-    version2.setDescription("SBB2");
+    version2.setDescriptionOutwardLine1("SBB2");
     version2.setNumber("BEX");
     version2 = versionRepository.save(version2);
-    version3.setDescription("SBB3");
+    version3.setDescriptionOutwardLine1("SBB3");
     version3.setNumber("BEX");
     version3 = versionRepository.save(version3);
-    version4.setDescription("SBB4");
+    version4.setDescriptionOutwardLine1("SBB4");
     version4.setNumber("BEX");
     version4 = versionRepository.save(version4);
     TimetableFieldNumberVersion editedVersion = version3Builder().build();
     editedVersion.setNumber("BEX");
-    editedVersion.setDescription("SBB2");
+    editedVersion.setDescriptionOutwardLine1("SBB2");
     editedVersion.setVersion(version3.getVersion());
 
     //when
@@ -65,12 +64,11 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
     result.sort(Comparator.comparing(TimetableFieldNumberVersion::getValidFrom));
 
     // first version no changes
-    assertThat(result.get(0)).isNotNull();
-    TimetableFieldNumberVersion firstTemporalVersion = result.get(0);
+    assertThat(result.getFirst()).isNotNull();
+    TimetableFieldNumberVersion firstTemporalVersion = result.getFirst();
     assertThat(firstTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
     assertThat(firstTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2021, 12, 31));
-    assertThat(firstTemporalVersion.getDescription()).isEqualTo("SBB1");
-    assertThat(firstTemporalVersion.getComment()).isNull();
+    assertThat(firstTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("SBB1");
     assertThat(firstTemporalVersion.getLineRelations()).isEmpty();
     assertThat(firstTemporalVersion.getNumber()).isEqualTo("BEX");
     assertThat(firstTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -81,8 +79,7 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
     TimetableFieldNumberVersion secondTemporalVersion = result.get(1);
     assertThat(secondTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2022, 1, 1));
     assertThat(secondTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2024, 12, 31));
-    assertThat(secondTemporalVersion.getDescription()).isEqualTo("SBB2");
-    assertThat(secondTemporalVersion.getComment()).isNull();
+    assertThat(secondTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("SBB2");
     assertThat(secondTemporalVersion.getLineRelations()).isEmpty();
     assertThat(secondTemporalVersion.getNumber()).isEqualTo("BEX");
     assertThat(secondTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -93,15 +90,13 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
     TimetableFieldNumberVersion thirdTemporalVersion = result.get(2);
     assertThat(thirdTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2025, 1, 1));
     assertThat(thirdTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2025, 12, 31));
-    assertThat(thirdTemporalVersion.getDescription()).isEqualTo("SBB4");
+    assertThat(thirdTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("SBB4");
     Set<TimetableFieldLineRelation> lineRelationsThirdVersion = thirdTemporalVersion.getLineRelations();
     assertThat(lineRelationsThirdVersion).isEmpty();
-    assertThat(thirdTemporalVersion.getComment()).isNull();
     assertThat(thirdTemporalVersion.getNumber()).isEqualTo("BEX");
     assertThat(thirdTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
     assertThat(thirdTemporalVersion.getBusinessOrganisation()).isEqualTo("sbb");
     assertThat(thirdTemporalVersion.getSwissTimetableFieldNumber()).isEqualTo("b0.BEX");
-
   }
 
   /**
@@ -120,19 +115,19 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
   @Test
   void scenarioMergeAllVersions() {
     //given
-    version1.setDescription("SBB1");
+    version1.setDescriptionOutwardLine1("SBB1");
     version1.setNumber("BEX");
     version1 = versionRepository.save(version1);
-    version2.setDescription("SBB2");
+    version2.setDescriptionOutwardLine1("SBB2");
     version2.setNumber("BEX");
     version2 = versionRepository.save(version2);
-    version3.setDescription("SBB1");
+    version3.setDescriptionOutwardLine1("SBB1");
     version3.setNumber("BEX");
     version3 = versionRepository.save(version3);
     TimetableFieldNumberVersion editedVersion = version2Builder().build();
-    editedVersion.setDescription("SBB2");
+    editedVersion.setDescriptionOutwardLine1("SBB2");
     editedVersion.setNumber("BEX");
-    editedVersion.setDescription("SBB1");
+    editedVersion.setDescriptionOutwardLine1("SBB1");
     editedVersion.setVersion(version2.getVersion());
 
     //when
@@ -144,18 +139,16 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
     result.sort(Comparator.comparing(TimetableFieldNumberVersion::getValidFrom));
 
     // result version merging version1, version2 and version3
-    assertThat(result.get(0)).isNotNull();
-    TimetableFieldNumberVersion firstTemporalVersion = result.get(0);
+    assertThat(result.getFirst()).isNotNull();
+    TimetableFieldNumberVersion firstTemporalVersion = result.getFirst();
     assertThat(firstTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
     assertThat(firstTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2024, 12, 31));
-    assertThat(firstTemporalVersion.getDescription()).isEqualTo("SBB1");
-    assertThat(firstTemporalVersion.getComment()).isNull();
+    assertThat(firstTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("SBB1");
     assertThat(firstTemporalVersion.getLineRelations()).isEmpty();
     assertThat(firstTemporalVersion.getNumber()).isEqualTo("BEX");
     assertThat(firstTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
     assertThat(firstTemporalVersion.getBusinessOrganisation()).isEqualTo("sbb");
     assertThat(firstTemporalVersion.getSwissTimetableFieldNumber()).isEqualTo("b0.BEX");
-
   }
 
   /**
@@ -174,24 +167,24 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
   @Test
   void scenarioMergeThroughMultipleVersions() {
     //given
-    version1.setDescription("SBB1");
+    version1.setDescriptionOutwardLine1("SBB1");
     version1.setNumber("BEX");
     version1 = versionRepository.save(version1);
-    version2.setDescription("SBB2");
+    version2.setDescriptionOutwardLine1("SBB2");
     version2.setNumber("BEX");
     version2 = versionRepository.save(version2);
-    version3.setDescription("SBB3");
+    version3.setDescriptionOutwardLine1("SBB3");
     version3.setNumber("BEX");
     version3 = versionRepository.save(version3);
-    version4.setDescription("SBB1");
+    version4.setDescriptionOutwardLine1("SBB1");
     version4.setNumber("BEX");
     version4 = versionRepository.save(version4);
     version5.setNumber("BEX");
-    version5.setDescription("SBB4");
+    version5.setDescriptionOutwardLine1("SBB4");
     version5 = versionRepository.save(version5);
     TimetableFieldNumberVersion editedVersion = version2Builder().build();
     editedVersion.setNumber("BEX");
-    editedVersion.setDescription("SBB1");
+    editedVersion.setDescriptionOutwardLine1("SBB1");
     editedVersion.setValidFrom(version2.getValidFrom());
     editedVersion.setValidTo(version3.getValidTo());
     editedVersion.setVersion(version2.getVersion());
@@ -205,11 +198,10 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
     result.sort(Comparator.comparing(TimetableFieldNumberVersion::getValidFrom));
 
     // result version merging version1, version2, version3 and version4
-    TimetableFieldNumberVersion firstTemporalVersion = result.get(0);
+    TimetableFieldNumberVersion firstTemporalVersion = result.getFirst();
     assertThat(firstTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
     assertThat(firstTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2025, 12, 31));
-    assertThat(firstTemporalVersion.getDescription()).isEqualTo("SBB1");
-    assertThat(firstTemporalVersion.getComment()).isNull();
+    assertThat(firstTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("SBB1");
     assertThat(firstTemporalVersion.getLineRelations()).isEmpty();
     assertThat(firstTemporalVersion.getNumber()).isEqualTo("BEX");
     assertThat(firstTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -220,14 +212,12 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
     TimetableFieldNumberVersion secondTemporalVersion = result.get(1);
     assertThat(secondTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2026, 1, 1));
     assertThat(secondTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2026, 12, 31));
-    assertThat(secondTemporalVersion.getDescription()).isEqualTo("SBB4");
-    assertThat(secondTemporalVersion.getComment()).isNull();
+    assertThat(secondTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("SBB4");
     assertThat(secondTemporalVersion.getLineRelations()).isEmpty();
     assertThat(secondTemporalVersion.getNumber()).isEqualTo("BEX");
     assertThat(secondTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
     assertThat(secondTemporalVersion.getBusinessOrganisation()).isEqualTo("sbb");
     assertThat(secondTemporalVersion.getSwissTimetableFieldNumber()).isEqualTo("b0.BEX");
-
   }
 
   /**
@@ -246,25 +236,25 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
   @Test
   void scenarioMergeThroughMultipleVersionsWithInterruption() {
     //given
-    version1.setDescription("SBB1");
+    version1.setDescriptionOutwardLine1("SBB1");
     version1.setNumber("BEX");
     version1 = versionRepository.save(version1);
-    version2.setDescription("SBB2");
+    version2.setDescriptionOutwardLine1("SBB2");
     version2.setNumber("BEX");
     version2 = versionRepository.save(version2);
-    version3.setDescription("SBB3");
+    version3.setDescriptionOutwardLine1("SBB3");
     version3.setNumber("BEX");
     version3.setValidTo(LocalDate.of(2024, 6, 1));
     version3 = versionRepository.save(version3);
-    version4.setDescription("SBB1");
+    version4.setDescriptionOutwardLine1("SBB1");
     version4.setNumber("BEX");
     version4 = versionRepository.save(version4);
     version5.setNumber("BEX");
-    version5.setDescription("SBB4");
+    version5.setDescriptionOutwardLine1("SBB4");
     version5 = versionRepository.save(version5);
     TimetableFieldNumberVersion editedVersion = version2Builder().build();
     editedVersion.setNumber("BEX");
-    editedVersion.setDescription("SBB1");
+    editedVersion.setDescriptionOutwardLine1("SBB1");
     editedVersion.setValidFrom(version2.getValidFrom());
     editedVersion.setValidTo(version3.getValidTo());
     editedVersion.setVersion(version2.getVersion());
@@ -278,11 +268,10 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
     result.sort(Comparator.comparing(TimetableFieldNumberVersion::getValidFrom));
 
     // result version merging version1, version2, version3 and version4
-    TimetableFieldNumberVersion firstTemporalVersion = result.get(0);
+    TimetableFieldNumberVersion firstTemporalVersion = result.getFirst();
     assertThat(firstTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
     assertThat(firstTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2024, 6, 1));
-    assertThat(firstTemporalVersion.getDescription()).isEqualTo("SBB1");
-    assertThat(firstTemporalVersion.getComment()).isNull();
+    assertThat(firstTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("SBB1");
     assertThat(firstTemporalVersion.getLineRelations()).isEmpty();
     assertThat(firstTemporalVersion.getNumber()).isEqualTo("BEX");
     assertThat(firstTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -293,8 +282,7 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
     TimetableFieldNumberVersion secondTemporalVersion = result.get(1);
     assertThat(secondTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2025, 1, 1));
     assertThat(secondTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2025, 12, 31));
-    assertThat(secondTemporalVersion.getDescription()).isEqualTo("SBB1");
-    assertThat(secondTemporalVersion.getComment()).isNull();
+    assertThat(secondTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("SBB1");
     assertThat(secondTemporalVersion.getLineRelations()).isEmpty();
     assertThat(secondTemporalVersion.getNumber()).isEqualTo("BEX");
     assertThat(secondTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
@@ -305,14 +293,12 @@ class TimetableFieldNumberServiceMergeScenarioTest extends
     TimetableFieldNumberVersion thirdTemporalVersion = result.get(2);
     assertThat(thirdTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2026, 1, 1));
     assertThat(thirdTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2026, 12, 31));
-    assertThat(thirdTemporalVersion.getDescription()).isEqualTo("SBB4");
-    assertThat(thirdTemporalVersion.getComment()).isNull();
+    assertThat(thirdTemporalVersion.getDescriptionOutwardLine1()).isEqualTo("SBB4");
     assertThat(thirdTemporalVersion.getLineRelations()).isEmpty();
     assertThat(thirdTemporalVersion.getNumber()).isEqualTo("BEX");
     assertThat(thirdTemporalVersion.getStatus()).isEqualTo(Status.VALIDATED);
     assertThat(thirdTemporalVersion.getBusinessOrganisation()).isEqualTo("sbb");
     assertThat(thirdTemporalVersion.getSwissTimetableFieldNumber()).isEqualTo("b0.BEX");
-
   }
 
 }
